added related files

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     <div class="container">
       <div id="new-task">
         <input type="text" placeholder="Enter The Task Here..." />
-       <!--- <button id="push" onclick="toggleClass()">Add Task</button>-->
-        <input onclick="change()" type="button" value="Add task" id="push"></input>
-       <!--<div><input type="text" placeholder="update task"/>
-            <button id ="update">Update</button></div> -->
+       <button id="push" onclick="toggleClass()">Add Task</button>
       </div>
 
       <div id="tasks"></div>
